# TrainOS

./: .cnb.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  Makefile  README.md  README_zh.md  disk.img  libmod.rlib  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pr.yml
.ide/: Dockerfile
docs/: 2026-04-09-microservices-architecture-design.md  architecture.md  norm-rules.json  service-dev.md  syscalls.md
docs/plans/: 2026-05-07-smp-implementation.md
docs/specs/: 2026-05-06-trainos-redesign.md  2026-05-07-smp-multicore-design.md  2026-05-18-trainos-v21-v30-roadmap.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: bb  bb.elf  bench.elf  cat.elf  console.rs  demo  demo.elf  drv.elf  echo.elf  edit  edit.elf  fs  fs.elf  http  init  init.elf  invariant.rs  kernel  kernel.elf  main.rs  mkfs  net  net.elf  netdrv  pci  per_cpu.rs  ping.elf  pkg.elf  proc.elf  reg.elf  rustdemo  selftest.elf  sh  sh.elf  stress.elf  sync.rs  tcp.elf  test_arp  test_arp.elf  test_c.elf  (+35 more)
lib/tros/: Cargo.toml
os/: Cargo.toml  build.rs  linker.ld
os-ccfa-research-2024-2026/: fields.yaml  generate_report.py  outline.yaml  report.md
os-ccfa-research-2024-2026/results/: AIOS_TREND.json  CONFIDENTIAL.json  CORTENMM.json  EAGLE_TEEM3.json  EBPFUN.json  EBPFVER.json  FINEMEM.json  HONGMENG.json  RFL.json  SQFS.json  WABI.json  WASMEXT.json
os/src/: boot.rs  console.rs  elf.rs  error.rs  main.rs  smp.rs
os/src/fs/: mod.rs  (+4 more)
scripts/: test.sh
services/: gen_asm_elf.py
services/bb/: Cargo.toml
services/bench/: Cargo.toml
services/cat/: Cargo.toml
services/demo/: Cargo.toml
services/drv/: Cargo.toml
services/echo/: Cargo.toml
services/edit/: Cargo.toml
services/fs/: Cargo.toml
services/http/: Cargo.toml
services/init/: Cargo.toml
services/mkfs/: Cargo.toml
services/net/: Cargo.toml
services/netdrv/: Cargo.toml
services/pci/: Cargo.toml
services/ping/: Cargo.toml
services/pkg/: Cargo.toml
services/proc/: Cargo.toml
services/reg/: Cargo.toml
services/rustdemo/: Cargo.toml
services/selftest/: Cargo.toml
services/sh/: Cargo.toml
services/stress/: Cargo.toml
services/tcp/: Cargo.toml
services/test_arp/: Cargo.toml
user/: Cargo.toml  GCC.md  Makefile  README.md  build-toolchain.sh  crt0.s  hello.c  link.ld  syscall.S  test.c
user/include/: ctype.h  errno.h  fcntl.h  limits.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
user/include/sys/: socket.h  stat.h  types.h  wait.h
user/libc/: stdio.c  stdlib.c  string.c
user/src/: driver.rs  driver_blk.rs  driver_mmio.rs  driver_net.rs  fs.rs  hello.rs  init.rs  main.rs  network.rs  procfs.rs  shell.rs  sysfs.rs  test_ebreak.rs  test_minimal.rs  vfs_service.rs  vi.rs
user/src/driver/: mmio.rs  mod.rs  virtio_blk.rs  virtio_net.rs
user/src/fs/: protocol.rs
user/src/net/: arp.rs  dns.rs  eth.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
(+235 files in other folders)
