[workspace]
resolver = "2"
members = ["kernel", "services/init", "services/ping", "services/fs", "services/test_fs", "services/sh", "services/uart", "services/test_fork", "services/test_posix", "services/test_posix2", "services/drv", "services/net", "services/netdrv", "services/echo", "services/test_net", "services/test_net2", "services/proc", "services/test_proc", "services/test_cap", "services/test_tfs", "services/tfs", "services/tfs_jrnl", "services/cat", "services/test_inv", "services/test_perf", "services/reg", "services/test_sdp", "services/test_clib", "services/test_smp", "services/edit", "services/test_edit", "services/bb", "services/bench", "services/pci", "services/veth", "services/test_arp", "services/stress", "services/demo", "services/rustdemo", "services/pkg", "services/test_pkg", "services/mkfs", "services/test_mount", "services/http", "services/test_http", "services/test_user", "services/test_shm", "services/test_sig", "services/test_exec", "services/tcp", "services/selftest", "lib/tros"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
