[package]
name = "user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "shell"
path = "src/shell.rs"

[[bin]]
name = "vi"
path = "src/vi.rs"

[[bin]]
name = "test_minimal"
path = "src/test_minimal.rs"

[[bin]]
name = "driver"
path = "src/driver.rs"

[[bin]]
name = "network"
path = "src/network.rs"

[[bin]]
name = "vfs"
path = "src/vfs_service.rs"

[dependencies]
spin = "0.9"
